[package]
name = "lzcomplexity-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "lzcomplexity_core"
path = "src/lib.rs"

[dependencies]
rayon = { workspace = true }
rustfft = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
suffix = { workspace = true }
